[TASK] Fix playlist alignment

--- a/src/sass/_lists.scss
+++ b/src/sass/_lists.scss
@@ -83,10 +83,10 @@
   text-decoration: none;
 }
 .list-tracks {
-  margin: 0 -10px;
+  margin: 0;
   padding: 0;
   li {
-    padding: 10px 15px;
+    padding: 10px 5px;
     margin: 0 -15px;
     list-style: none;
     overflow: hidden;
